2003-02-05	Joel Sherrill <joel@OARcorp.com>

	* include/sys/ioccom.h: Fix so not using internal RTEMS types in libc
	code.

2003-02-03	Joel Sherrill <joel@OARcorp.com>

	PR 338/filesystem
	* src/unixlibc.c: Side-effect of fixing reentrancy problem with 
	rtems_io_lookup_name() (API change).

2003-02-03     Till Straumann  <strauman@slac.stanford.edu>

	PR 339/filesystem
	* src/chroot.c: Fix violation of FS node object copy semantics.

2003-01-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Eliminate OBJS.

2003-01-10	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/libio.h: Rename __dev_t to __rtems_dev_t to avoid
	conflict with GNU/Linux header files.

2003-01-03     Till Straumann  <strauman@slac.stanford.edu>

	* ChangeLog, base_fs.c, getpwent.c, privateenv.c 
	Per PR303, Fix violation of node_access copy syemantics 

2002-12-26     Till Straumann  <strauman@slac.stanford.edu

        * src/fchdir.c: PR302 fix violation of FS node object copy semantics.

2002-12-06	Joel Sherrill <joel@OARcorp.com>

	* src/malloc.c: Fixed code that incorrected did a disable dispatch
	instead of locking and unlocking the allocator mutex.

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add various checks to enhance portability.
	* src/termios.c: Reflect changes to configure.ac.

2002-12-02	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/libio.h: Internally use a union of an unsigned64
	and major/minor device so we don't get into trouble shifting.
	The h8300 seemed to be impossible to remove warnings otherwise.
	Eventually the structure definition of a dev_t might be better anyway.
	* include/sys/ioccom.h: Added casts to remove warnings on 16 bit
	targets.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Cosmetical fixes.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Fix package name.

2002-11-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
