@@ -1,3 +1,8 @@
+2003-02-05     Till Straumann  <strauman@slac.stanford.edu>
+
+	PR 340/filesystem
+	* src/fcntl.c: Add missing _fcntl_r assumed to exist by newlib.
+
 2003-02-05	Joel Sherrill <joel@OARcorp.com>
 
 	* include/sys/ioccom.h: Fix so not using internal RTEMS types in libc
